<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Timbangan -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.weighingscale.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- Riwayat -->
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.weighingscale.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_HistoryFragment_to_HistoryDetailFragment"
            app:destination="@id/navigation_history_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_history_detail"
        android:name="com.example.weighingscale.ui.history.HistoryDetailFragment"
        android:label="@string/history_detail"
        tools:layout="@layout/fragment_history_detail" />


    <!-- Pengaturan -->
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.weighingscale.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <!-- Perangkat -->
    <fragment
        android:id="@+id/navigation_device"
        android:name="com.example.weighingscale.ui.device.DeviceFragment"
        android:label="@string/title_device"
        tools:layout="@layout/fragment_device" />

    <!-- Note -->
    <fragment
        android:id="@+id/navigation_note"
        android:name="com.example.weighingscale.ui.note.NoteFragment"
        android:label="Note"
        tools:layout="@layout/fragment_note">
        <action
            android:id="@+id/action_noteFragment_to_addEditNoteFragment"
            app:destination="@id/form_note_fragment" />
    </fragment>
    <fragment
        android:id="@+id/form_note_fragment"
        android:name="com.example.weighingscale.ui.note.FormNoteFragment"
        tools:layout="@layout/fragment_note_form" />
</navigation>