<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context=".ui.history.HistoryFragment">

    <!-- Search Field and Filter Icon -->
    <LinearLayout
        android:id="@+id/search_filter_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/search_field_margin_bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="@dimen/search_field_padding"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/icon_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/filter"
            android:layout_marginStart="@dimen/filter_icon_margin_start"
            app:tint="?attr/colorSecondary" />

        <ImageView
            android:id="@+id/icon_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sort_desc"
            android:contentDescription="@string/sort"
            android:layout_marginStart="@dimen/filter_icon_margin_start"
            app:tint="?attr/colorSecondary" />

    </LinearLayout>



    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_filter_layout"
        app:layout_constraintBottom_toTopOf="@+id/button_delete_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_history" />

    <!-- No Data Image -->
    <ImageView
        android:id="@+id/image_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/no_data_margin_bottom"
        android:src="@drawable/vector_farmer_sad"
        android:contentDescription="@string/no_data_available"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- No Data Text -->
    <TextView
        android:id="@+id/text_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/no_data_text_margin_top"
        android:text="@string/no_data_available"
        android:textSize="@dimen/no_data_text_size"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/image_no_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Delete All Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/delete_button_margin"
        android:text="@string/delete_all"
        android:backgroundTint="?attr/colorError"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
